Fixed spacing between img and p in about

--- a/css/index.css
+++ b/css/index.css
@@ -167,7 +167,7 @@ nav #logo {
 }
 #about img {
 	width: 100%;
-	padding: 1rem .5rem 1rem 0;
+	padding: 1rem 3rem 1rem 0;
 }
 
 /* Bikes Section Styles */
